--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@ title: Leezw Blog
 SEOTitle: Leezw Blog
 header-img: img/home-bg.jpg
 email: jzdd327@163.com
-description: "一个想成为黑客、画家、音乐家、设计师的菜鸟的博客"
-keyword: "leezw, leezw Blog, Baymax0"
-url: "https://baymax0.github.io"              # your host, for absolute URL
+description: "百度上搜到的网页描述"
+keyword: "彭冷艳, pengly" #可以被搜索引擎搜索的关键词、不会马上生效、可能几天、可能几年
+url: "https://Estelle-peng.github.io"              # your host, for absolute URL
 # baseurl: ""         # for example, '/blog' if your blog hosted on 'host/blog'
 
 future: true
